force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <label>Discount</label>
    <nameField>
        <displayFormat>DIS-{0000}</displayFormat>
        <label>Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>