force-app/main/default/objects/Discount__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>