force-app/main/default/objects/Discount__c/fields/Percentage_of_AV__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_AV__c</fullName>
    <label>Percentage of AV/Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>