force-app/main/default/objects/Discount__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armed Forces</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>Spin the wheel</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <label>Corporate - Percentage of Basic</label>
            </value>
            <value>
                <fullName>Input Tax Credit</fullName>
            </value>
            <value>
                <fullName>Other Discount</fullName>
            </value>
            <value>
                <fullName>Card Swipe Discount</fullName>
            </value>
            <value>
                <fullName>Employee Discount</fullName>
            </value>
            <value>
                <fullName>Modular Kit</fullName>
            </value>
            <value>
                <fullName>2.5% of final CV</fullName>
            </value>
            <value>
                <fullName>Referral Discount</fullName>
            </value>
            <value>
                <fullName>Corporate - Percentage</fullName>
            </value>
            <value>
                <fullName>Corporate - Lumsum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>