force-app/main/default/objects/Discount__c/fields/Special_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Discount</label>
    <type>Checkbox</type>
</CustomField>