force-app/main/default/objects/Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cluster__c</columns>
    <columns>Reason__c</columns>
    <columns>Type__c</columns>
    <columns>Editable__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>